@@ -196,7 +196,7 @@ bool KMAcctPop::doProcessNewMail(KMIOStatus *wid)
   response = client.SingleLineResponse().c_str();
   sscanf(response.data(), "%3s %d %d", dummyStr, &num, &size);
 
-#warning "*** If client.Last() cannot be found then install the latest kdesupport"
+//#warning "*** If client.Last() cannot be found then install the latest kdesupport"
   if (client.Last() == '+' && !mRetrieveAll)
   {
     response = client.SingleLineResponse().c_str();
